--- a/argocd-sync-hook-test-chart/templates/deployment.yaml
+++ b/argocd-sync-hook-test-chart/templates/deployment.yaml
@@ -18,7 +18,7 @@ spec:
         - name: busybox
           image: busybox
           command: ["/bin/sh", "-c","sleep 99999"]
-{{/*          lifecycle:*/}}
-{{/*            postStart:*/}}
-{{/*              exec:*/}}
-{{/*                command: ["/bin/sh","-c","sleep 60"]*/}}
+          lifecycle:
+            postStart:
+              exec:
+                command: ["/bin/sh","-c","sleep 60"]
