--- a/argocd-sync-hook-test-chart/templates/deployment.yaml
+++ b/argocd-sync-hook-test-chart/templates/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: busybox
 spec:
-  replicas: 3
+  replicas: 2
   selector:
     matchLabels:
       app: busybox
@@ -17,8 +17,8 @@ spec:
       containers:
         - name: busybox
           image: busybox
-          command: ["/bin/sh", "-c","sleep 99999"]
-          lifecycle:
-            postStart:
-              exec:
-                command: ["/bin/sh","-c","sleep 60"]
+          command: ["/bin/testsh", "-c","sleep 99999"]
+{{/*          lifecycle:*/}}
+{{/*            postStart:*/}}
+{{/*              exec:*/}}
+{{/*                command: ["/bin/sh","-c","sleep 60"]*/}}
